2003-06-25  Jeff Freedman  <jeff@amy.nerble.net>

	* items.{cc,h},msgfile.{cc,h}:  Adding support for an
	'exultmsg.txt' file containing strings used in C++ code.

2003-06-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc, gumps/VideoOptions_gump.cc: fixed screen corruption
	  when changing scaler from video options gump

2003-06-24  Max Horn  <max@quendi.de>
	* audio/midi_drivers/mac_midi.cc: Fixed pan controller in QuickTime 
	  midi.

2003-06-24  Max Horn  <max@quendi.de>
	* files/rwregress.cc, conf/xmain.cc, usecode/compiler/ucfun.cc,
	  usecode/ucxt/include/ops.h: added #include <cassert> to please GCC3.3

2003-05-21  Tristan Tarrant  <nadir@users.sourceforge.net>
	* files/databuf.h, tools/cmanip.cc: added #include <cassert> to
	  please GCC 3.3

2003-05-11  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: 'Formation' walking is now on permanently.
	* mapedit/*: Now uses gtk_drag_begin() so that DND works with GTK2.x.

2003/05/09: Aurelien Marchand (artaxerxes@users.sf.net)
	* added command option to tools/cmanip.cc to return the value of a key

2003-05-05 Tristan Tarrant <nadir@users.sourceforge.net>
	* exult.cc, audio/Midi.cc: add new configuration
	  config/disk/music_path, where the user can specify a path to the
	  OGG files

2003-05-04 Dominik Reichardt <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated
	* docs/*.html, exult_studio.txt: updated
	* docs/usecode_bugs.txt: added SI-SS pillars bug
	* FAQ, ReadMe : updated and spellchecked
	
2003-04-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/objedit.cc: properly load/save shape/frame/quality for objs
	* palette.cc: removed unnecessary palette changes

2003-04-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* docs/usecode_bugs.txt: added some bugs from the forum

2003-04-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: use unsigned char to index font frames.
